<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:text="@string/logo_settings"
        android:textAlignment="center"
        android:textColor="@color/secColor"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/logo"
        android:background="@color/secColor" />

    <LinearLayout
        android:id="@+id/switch_dark_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/line"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_view_switchCombat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/darkViewTextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_dark_view_text_large"
                android:textColor="@color/secColor"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/darkViewTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_dark_view_text_small"
                android:textColor="@color/secColor"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/switch_dark_view"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/reminder_switchCombat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notificationTextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_reminders_text_large"
                android:textColor="@color/secColor"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/notificationTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_reminders_text_small"
                android:textColor="@color/secColor"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/reminderListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_reminder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/reminderList"
        android:textColor="@color/secColor"
        android:textSize="30sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spinner_notification_time"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminderListText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/list_view_reminder_list"
            android:layout_width="280dp"
            android:layout_height="170dp"
            android:background="@drawable/spinner_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button_add_reminder"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/secColor"
            android:text="+"
            android:textColor="@color/mainColor"
            android:textSize="20sp"
            android:onClick="addReminderListener"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout >