<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="1dip"
    android:paddingBottom="1dip"
    android:paddingStart="8dip"
    android:paddingEnd="8dip">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/SYSText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/secColor"
            android:text="@string/SYSText"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/DateDay"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                android:textColor="@color/secColor" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/SYSValText"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="7dp"
        android:textColor="@color/secColor"
        />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/DateMonth"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/secColor" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/DIAText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="7dp"
        android:textColor="@color/secColor"
        android:text="@string/DIAText"
        />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/DateYear"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"
                android:layout_marginStart="7dp"
                android:textColor="@color/secColor" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/DIAValText"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="7dp"
            android:textColor="@color/secColor"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TimeHours"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                android:layout_marginStart="7dp"
                android:textColor="@color/secColor" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PulsePressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="7dp"
            android:textColor="@color/secColor"
            android:text="@string/PulsePressText"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TimeMinutes"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"
                android:layout_marginStart="7dp"
                android:textColor="@color/secColor" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/PulsePressValText"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="7dp"
        android:textColor="@color/secColor"
        />

</LinearLayout>